--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
 
 
 <!--script src="/js/main.js"></script-->
-<script src="/js/XPlate.js"></script>
+<!--script src="/js/XPlate.js"></script>
 <script src="/js/Collection.js"></script>
 <script src="/js/Composition.js"></script>
 <script src="/js/CompositionComposite.js"></script>
@@ -31,7 +31,17 @@
 <script src="/js/plate/XComposition.js"></script>
 <script src="/js/plate/XCompositionComposite.js"></script>
 
-<script src="/js/main.js"></script>
+<script src="/js/main.js"></script-->
+
+
+
+<script src="/js/require.js"></script>
+<script src="/ceive/ceive.xplate.js"></script>
+<script>
+	require(["main"]);
+</script>
+
+
 
 </body>
 </html>
